[workspace]
members=["framework",
        # "test/framework-test",
        # "test/delay-test",
        # "test/macswap",
        # "test/shutdown-test",
        # "test/chain-test",
        # "test/lpm",
        # "test/lpm-embedded",
        # "test/nat",
        # "test/maglev",
        # "test/packet_generation",
        # "test/packet_test",
        # "test/tcp_check",
        # "test/tcp_payload",
        # "test/sctp-test",
        # "test/config-test",
        # "test/reset-parse",
        # "test/tcp_reconstruction",
        # "test/acl-fw",
        # "test/dpi",
        # "test/embedded-scheduler-test",
        # "test/embedded-scheduler-dependency-test",
        "faas-nfv/bpf1",
        "faas-nfv/bpf2",
        "faas-nfv/bpf3",
        "faas-nfv/bpf4",
        "faas-nfv/bpf5",
        "faas-nfv/bpf6",
        "faas-nfv/macswap",
        "faas-nfv/vlanpop-acl",
        "faas-nfv/acl-urlfilter-chacha",
        "faas-nfv/acl-distribnat",
        "faas-nfv/scheduler_benchmark",
        "faas-nfv/scheduler_ubenchmark",
        ]

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true
debug-assertions = false
