[package]
name = "zcsi-dpi"
version = "0.1.0"
authors = ["Aurojit Panda <apanda@cs.berkeley.edu>"]

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = "=0.1.36"
getopts = "*"
rand = "0.3.15"
fnv = "*"
aho-corasick = { git="https://github.com/BurntSushi/aho-corasick", tag="0.6.3"}


[features]
default = []
print = []
